server-setup/zot-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zot-registry
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zot
  template:
    metadata:
      labels:
        app: zot
    spec:
      containers:
      - name: zot
        image: ghcr.io/project-zot/zot-linux-amd64:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: zot-storage
          mountPath: /var/lib/zot
      volumes:
      - name: zot-storage
        persistentVolumeClaim:
          claimName: zot-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zot-service
  namespace: dev
spec:
  selector:
    app: zot
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Triggers SSL
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - registry.bmd.ambrizal.net
    secretName: zot-registry-tls # Where SSL cert is stored
  rules:
  - host: registry.bmd.ambrizal.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zot-service
            port:
              number: 5000
